# sad

./: .gitignore  CMakeLists.txt  LICENSE  README.md
cmake/: gtest.cmake  jsoncpp.cmake  sqlite.cmake
include/sad/: container_adapter_helper.hpp  demangle.hpp  deserialize.hpp  maybe_null.hpp  ostream.hpp  schema.hpp  serialize.hpp  tuple_utils.hpp  type_traits.hpp  utility.hpp
include/sad/backend/: jsoncpp_deserializer.hpp  jsoncpp_serializer.hpp  ostream_serializer.hpp
tests/: CMakeLists.txt  main.cpp  tests_types.hpp
